--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "tsc",
     "test": "jest"
   },
-
   "keywords": [
     "nodejs",
     "typescript",
@@ -18,7 +17,6 @@
     "node": "16.13.0"
   },
   "author": "",
-
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
@@ -31,7 +29,8 @@
     "joi": "^17.6.0",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -53,7 +52,7 @@
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.4"
   },
   "husky": {
     "hooks": {
